unpackaged/main/default/objects/Help_Guide_Node__mdt/Help_Guide_Node__mdt.object-meta.xml
<CustomObject>
    <label>Help Guide Node</label>
    <pluralLabel>Help Guide Nodes</pluralLabel>
</CustomObject>