unpackaged/main/default/objects/Help_Guide_Node__mdt/fields/Guide__c.field-meta.xml
<CustomField>
    <fullName>Guide__c</fullName>
    <label>Guide</label>
    <referenceTo>Help_Guide__mdt</referenceTo>
    <relationshipLabel>Help Guide Nodes</relationshipLabel>
    <relationshipName>Help_Guide_Nodes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>