unpackaged/main/default/objects/Help_Guide_Node__mdt/fields/Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Node_Key__c</fullName>
    <label>Node Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>